#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([ahungry/annolazy], [0.0.1], [m@ahungry.com])

# Checks for programs.
# Gee - I sure hope this exists
AC_CHECK_PROG(AUTOCONF, [autoconf], [yes], [no])

AS_IF([test "x$AUTOCONF" = xno],
  AC_MSG_ERROR(Cannot find autoconf))

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
